# binanceTest

./: .gitignore  README.md  USDT_NGN rates.csv  USDT_NGN ratesss.csv  app.py  binance_data.csv  dagster_service.bat  data.json  main.py  pyproject.toml  streamlit_app.py  test.csv  test.ipynb  usdt.json
.tmp_dagster_home_0_n594m9/history/runs/: 46655594-360e-466a-9483-c372e5b156db.db  d5e66372-9ed7-4eb2-867c-a506ee5a5a27.db
.tmp_dagster_home_8svfhxxg/history/: runs.db
.tmp_dagster_home_8svfhxxg/history/runs/: 1fdae79a-89d8-4999-86d3-1028e3e1baff.db  44441e7b-6a24-46e4-a0af-0cf600bf217f.db  87dcf4d7-fde7-4e79-8327-9ea9d4b31334.db  index.db
.tmp_dagster_home_8svfhxxg/schedules/: schedules.db
.tmp_dagster_home_ztooti2l/history/: runs.db
.tmp_dagster_home_ztooti2l/history/runs/: index.db
.tmp_dagster_home_ztooti2l/schedules/: schedules.db
data/raw/: binance_ohlc_rates.csv
exchange_rate_tracker/: README.md  pyproject.toml
exchange_rate_tracker/.tmp_dagster_home_0_n594m9/history/: runs.db
exchange_rate_tracker/.tmp_dagster_home_0_n594m9/schedules/: schedules.db
src/exchange_rate_tracker/defs/: assets.py  constants.py  resources.py
usdt_rates/: .gitignore  README.md  dagit_service.bat  pyproject.toml  schedule.py  setup.cfg  setup.py
usdt_rates/data/raw/: binance_ohlc_rates.csv  daily_ohlc_rates.csv  raw_rates.json  usdt_prices.csv
usdt_rates/tmp25144l5q/history/: runs.db
usdt_rates/tmp25144l5q/schedules/: schedules.db
usdt_rates/tmp2x9j4xhb/history/: runs.db
usdt_rates/usdt_rates/: __init__.py  resources.py
(+464 files in other folders)
