[project]
name = "exchange_rate_tracker"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster-slack>=0.27.6",
    "dagster==1.11.6",
    "pandas>=2.3.1",
    "dagster-webserver>=1.11.6",
    "dagster-dg-cli>=1.11.6",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "exchange_rate_tracker"
registry_modules = [
    "exchange_rate_tracker.defs",
]


